--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@vueuse/core": "^10.2.1",
     "pinia": "^2.0.36",
     "swiper": "^9.3.2",
     "vue": "^3.3.2",
